tests/NormalTests/paczka1/small_fuzzy/86231335.err
Error in line 8: vs05X A880 61,6
Error in line 13: d2dgBjn S739 73,9
